--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="20dp"
         android:tint="@android:color/white"
-        app:srcCompat="@drawable/ic_add" />
+        app:srcCompat="@drawable/ic_create" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
