--- a/app/src/main/res/layout/note_adapter.xml
+++ b/app/src/main/res/layout/note_adapter.xml
@@ -28,6 +28,7 @@
                 android:gravity="start"
                 android:padding="5dp"
                 android:text="Title"
+                android:textStyle="bold"
                 android:textColor="@android:color/background_dark"
                 android:textSize="20sp" />
 
@@ -40,7 +41,6 @@
                 android:padding="5dp"
                 android:text="Description"
                 android:textColor="@android:color/background_dark"
-
                 android:textSize="15sp" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
